[gd_scene load_steps=12 format=3 uid="uid://yvshx12gqkta"]

[ext_resource type="Script" path="res://scripts/sweeta.gd" id="1_sm0g6"]
[ext_resource type="PackedScene" uid="uid://bnfahcg4a1rf0" path="res://scenes/hitbox.tscn" id="2_mcb0k"]
[ext_resource type="Texture2D" uid="uid://xpp4pgpdffyo" path="res://assets/Sweeta.png" id="3_ekh0j"]
[ext_resource type="Script" path="res://scripts/hand_body_2d.gd" id="3_watai"]
[ext_resource type="Texture2D" uid="uid://ckxut8niajf2e" path="res://scripts/hand.svg" id="4_opwy4"]
[ext_resource type="Script" path="res://scripts/sword.gd" id="5_gd0vd"]
[ext_resource type="Script" path="res://scripts/hand.gd" id="5_x7lw0"]
[ext_resource type="Texture2D" uid="uid://ctmadd6chk4f" path="res://assets/Longsword.png" id="7_entn8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ipnfy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ekh0j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l2g0o"]
radius = 83.8153

[sub_resource type="CircleShape2D" id="CircleShape2D_2ybey"]
radius = 0.01

[node name="Sweeta" type="Node2D" groups=["player"]]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_sm0g6")
hitbox_scene = ExtResource("2_mcb0k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ipnfy")

[node name="Hurtbox" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_l2g0o")

[node name="HandBody2D" type="StaticBody2D" parent="CharacterBody2D"]
position = Vector2(35, -26)
script = ExtResource("3_watai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/HandBody2D"]
shape = SubResource("CircleShape2D_2ybey")
disabled = true

[node name="Hand" type="Sprite2D" parent="CharacterBody2D/HandBody2D"]
position = Vector2(14, 6)
rotation = 1.5708
scale = Vector2(0.328125, 0.304688)
texture = ExtResource("4_opwy4")
script = ExtResource("5_x7lw0")

[node name="Sword" type="Sprite2D" parent="CharacterBody2D/HandBody2D/Hand"]
texture_filter = 1
position = Vector2(10.001, 0)
scale = Vector2(10, 10)
texture = ExtResource("7_entn8")
offset = Vector2(0, -21.315)
script = ExtResource("5_gd0vd")

[node name="AttackCooldown" type="Timer" parent="CharacterBody2D"]
process_callback = 0
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="CharacterBody2D/AttackCooldown" to="CharacterBody2D" method="_on_attack_cooldown_timeout"]
